Create and fetch JSON

--- a/Projects.html
+++ b/Projects.html
@@ -53,42 +53,12 @@
                 <p class="text-center">Nunc luctus in metus eget fringilla. Aliquam sed justo ligula. Vestibulum nibh
                     erat, pellentesque ut laoreet vitae. </p>
             </div>
-            <div class="row projects">
+            <div id="projectBox" class="row projects">
                 <div class="col-sm-6 col-lg-4 item"><img class="img-fluid rounded-0 border"
                         data-bss-hover-animate="pulse" src="assets/img/desk.jpg">
-                    <h3 class="name">Project Name</h3>
-                    <p class="description">Aenean tortor est, vulputate quis leo in, vehicula rhoncus lacus. Praesent
-                        aliquam in tellus eu gravida. Aliquam varius finibus est, interdum justo suscipit id.</p>
-                </div>
-                <div class="col-sm-6 col-lg-4 item"><img class="img-fluid rounded-0 border"
-                        data-bss-hover-animate="pulse" src="assets/img/building.jpg">
-                    <h3 class="name">Project Name</h3>
-                    <p class="description">Aenean tortor est, vulputate quis leo in, vehicula rhoncus lacus. Praesent
-                        aliquam in tellus eu gravida. Aliquam varius finibus est, interdum justo suscipit id.</p>
-                </div>
-                <div class="col-sm-6 col-lg-4 item"><img class="img-fluid rounded-0 border"
-                        data-bss-hover-animate="pulse" src="assets/img/loft.jpg">
-                    <h3 class="name">Project Name</h3>
-                    <p class="description">Aenean tortor est, vulputate quis leo in, vehicula rhoncus lacus. Praesent
-                        aliquam in tellus eu gravida. Aliquam varius finibus est, interdum justo suscipit id.</p>
-                </div>
-                <div class="col-sm-6 col-lg-4 item"><img class="img-fluid rounded-0 border"
-                        data-bss-hover-animate="pulse" src="assets/img/minibus.jpeg">
-                    <h3 class="name">Project Name</h3>
-                    <p class="description">Aenean tortor est, vulputate quis leo in, vehicula rhoncus lacus. Praesent
-                        aliquam in tellus eu gravida. Aliquam varius finibus est, interdum justo suscipit id.</p>
-                </div>
-                <div class="col-sm-6 col-lg-4 item"><img class="img-fluid rounded-0 border"
-                        data-bss-hover-animate="pulse" src="assets/img/building.jpg">
-                    <h3 class="name">Project Name</h3>
-                    <p class="description">Aenean tortor est, vulputate quis leo in, vehicula rhoncus lacus. Praesent
-                        aliquam in tellus eu gravida. Aliquam varius finibus est, interdum justo suscipit id.</p>
-                </div>
-                <div class="col-sm-6 col-lg-4 item"><img class="img-fluid rounded-0 border"
-                        data-bss-hover-animate="pulse" src="assets/img/desk.jpg">
-                    <h3 class="name">Project Name</h3>
-                    <p class="description">Aenean tortor est, vulputate quis leo in, vehicula rhoncus lacus. Praesent
-                        aliquam in tellus eu gravida. Aliquam varius finibus est, interdum justo suscipit id.</p>
+                    <h3 class="name">Calculator app</h3>
+                    <p class="description">Fans cheering crash was 'mind-blowing' - Hamilton</p>
+                    <a href="/" target="_blank"><button type="button" class="readBtn btn btn-primary">Read more</button></a>
                 </div>
             </div>
         </div>
@@ -110,6 +80,7 @@
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="assets/js/bs-init.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
+    <script src="assets/js/Project.js"></script>
 </body>
 
 </html>
