Fixing images and add new Thumbnails for project

--- a/About.html
+++ b/About.html
@@ -34,7 +34,7 @@
             <div class="collapse navbar-collapse" id="navcol-1">
                 <ul class="navbar-nav">
                     <li class="nav-item"></li>
-                    <li class="nav-item"><a class="nav-link" href="About.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                     <li class="nav-item"><a class="nav-link active" href="#">About</a></li>
                     <li class="nav-item"><a class="nav-link" href="Projects.html">Projects</a></li>
                     <li class="nav-item"><a class="nav-link" href="Contact.html">Contact</a></li>
@@ -51,7 +51,7 @@
         <div class="row" style="margin: 25px 5px;padding: 1px;margin-top: 3px;">
             <div class="col-md-4 col-lg-4"
                 style="background: #f7f7f7;margin: 10px;/*display: flex;*//*align-items: center;*/"><img
-                    class="img-fluid" src="assets/img/Admin%20(1).png"
+                    class="img-fluid" src="assets/img/Admin.png"
                     style="height: 284px;/*justify-content: center;*/">
                 <div>
                     <h1>Desai Hardik</h1>
