--- a/Projects.html
+++ b/Projects.html
@@ -54,12 +54,16 @@
                     erat, pellentesque ut laoreet vitae. </p>
             </div>
             <div id="projectBox" class="row projects">
-                <div class="col-sm-6 col-lg-4 item"><img class="img-fluid rounded-0 border"
-                        data-bss-hover-animate="pulse" src="assets/img/desk.jpg">
+
+                <div class="col-sm-6 col-lg-4 item">
+                    <img class="imgThumbnail img-fluid rounded-0 border" data-bss-hover-animate="pulse"
+                        src="https://cdn3d.iconscout.com/3d/premium/thumb/calculator-3408623-2838153.png">
                     <h3 class="name">Calculator app</h3>
                     <p class="description">Fans cheering crash was 'mind-blowing' - Hamilton</p>
-                    <a href="/" target="_blank"><button type="button" class="readBtn btn btn-primary">Read more</button></a>
+                    <a href="/" target="_blank"><button type="button" class="readBtn btn btn-outline-primary">Read
+                            more</button></a>
                 </div>
+
             </div>
         </div>
     </section>
