--- a/index.html
+++ b/index.html
@@ -66,19 +66,16 @@
                 <div class="
               col-md-8 col-lg-8 col-xxl-6
               offset-md-2 offset-lg-2 offset-xxl-3
-              item
-            ">
+              item">
                     <div data-bss-hover-animate="pulse" id="boxshadow" class="box">
-                        <img class="rounded-circle" src="assets/img/Admin%20(1).png" />
+                        <img class="rounded-circle" src="assets/img/Admin.png" />
                         <h3 class="name">Hardik Desai</h3>
                         <div>
-                            <p class="title">Coder | DESIGNER | FREELANCER&nbsp;</p>
+                            <p class="title">DESIGNER | FRONTED DEVELOPER | FREELANCER&nbsp;</p>
                         </div>
                         <p class="description">
-                            Aenean tortor est, vulputate quis leo in, vehicula rhoncus
-                            lacus. Praesent aliquam in tellus eu gravida. Aliquam varius
-                            finibus est, et interdum justo suscipit id. Etiam dictum feugiat
-                            tellus, a semper massa.
+                            I am pursuing engineering and I can do it work on a challenging job profile which provides
+                            an opportunity to enhance my technical skills and knowledge.
                         </p>
                     </div>
                 </div>
@@ -90,8 +87,7 @@
             <div class="intro">
                 <h2 class="text-center">Projects</h2>
                 <p class="text-center">
-                    Nunc luctus in metus eget fringilla. Aliquam sed justo ligula.
-                    Vestibulum nibh erat, pellentesque ut laoreet vitae.
+                    These are some of my Projects. All Projects are available on Github. You can check it out.
                 </p>
             </div>
             <div class="row projects">
@@ -99,7 +95,7 @@
                     <div class="row">
                         <div class="col-md-12 col-lg-5">
                             <a href="#"><img class="img-fluid" data-aos="fade" data-aos-duration="1700"
-                                    src="assets/img/desk.jpg" /></a>
+                                    src="assets/img/thumbnails/desk.jpg" /></a>
                         </div>
                         <div class="col">
                             <h3 class="name">Project Name</h3>
@@ -107,51 +103,8 @@
                                 Aenean tortor est, vulputate quis leo in, vehicula rhoncus
                                 lacus. Praesent aliquam in tellus eu gravida.
                             </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-sm-6 item">
-                    <div class="row">
-                        <div class="col-md-12 col-lg-5">
-                            <a href="#"><img class="img-fluid" data-aos="fade" data-aos-duration="1700"
-                                    src="assets/img/building.jpg" /></a>
-                        </div>
-                        <div class="col">
-                            <h3 class="name">Project Name</h3>
-                            <p class="description">
-                                Aenean tortor est, vulputate quis leo in, vehicula rhoncus
-                                lacus. Praesent aliquam in tellus eu gravida.
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-sm-6 item">
-                    <div class="row">
-                        <div class="col-md-12 col-lg-5">
-                            <a href="#"><img class="img-fluid" data-aos="fade" data-aos-duration="1700"
-                                    data-aos-delay="100" src="assets/img/loft.jpg" /></a>
-                        </div>
-                        <div class="col">
-                            <h3 class="name">Project Name</h3>
-                            <p class="description">
-                                Aenean tortor est, vulputate quis leo in, vehicula rhoncus
-                                lacus. Praesent aliquam in tellus eu gravida.
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-sm-6 item">
-                    <div class="row">
-                        <div class="col-md-12 col-lg-5">
-                            <a href="#"><img class="img-fluid" data-aos="fade" data-aos-duration="1700"
-                                    data-aos-delay="100" src="assets/img/minibus.jpeg" /></a>
-                        </div>
-                        <div class="col">
-                            <h3 class="name">Project Name</h3>
-                            <p class="description">
-                                Aenean tortor est, vulputate quis leo in, vehicula rhoncus
-                                lacus. Praesent aliquam in tellus eu gravida.
-                            </p>
+                            <a href="" target="_blank"><button type="button" class="readBtn btn btn-outline-primary btn-sm">Read
+                                    more</button></a>
                         </div>
                     </div>
                 </div>
