--- a/Projects.html
+++ b/Projects.html
@@ -54,15 +54,22 @@
                     erat, pellentesque ut laoreet vitae. </p>
             </div>
             <div id="projectBox" class="row projects">
-
+                <!-- box start here -->
                 <div class="col-sm-6 col-lg-4 item">
                     <img class="imgThumbnail img-fluid rounded-0 border" data-bss-hover-animate="pulse"
-                        src="https://cdn3d.iconscout.com/3d/premium/thumb/calculator-3408623-2838153.png">
-                    <h3 class="name">Calculator app</h3>
+                        src="assets/img/Thumbnails/notes-app.png">
+                    <h3 class="name">Notes WebApp</h3>
                     <p class="description">Fans cheering crash was 'mind-blowing' - Hamilton</p>
                     <a href="/" target="_blank"><button type="button" class="readBtn btn btn-outline-primary">Read
-                            more</button></a>
+                        more</button></a><br>
+                        <!-- <span class="badge text-black bg-warning">Javascript</span> -->
+                        <img class="langIcon" src="assets/img/Thumbnails/icon/html.png" alt="">
+                        <img class="langIcon" src="assets/img/Thumbnails/icon/css.png" alt="">
+                        <img class="langIcon" src="assets/img/Thumbnails/icon/js.png" alt="">
+
                 </div>
+
+                <!-- box ends here -->
 
             </div>
         </div>
@@ -79,7 +86,7 @@
             <li class="list-inline-item"><a href="Projects.html">Projects</a></li>
             <li class="list-inline-item"><a href="Contact.html">Contact</a></li>
         </ul>
-        <p class="copyright">Copyright © 2020-2021 hardikdesai.myartsonline.com<br></p>
+        <p class="copyright">Copyright © 2020-2021 bit.ly/imhardikdesai<br></p>
     </footer>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="assets/js/bs-init.js"></script>
