--- a/index.html
+++ b/index.html
@@ -91,11 +91,11 @@
                 </p>
             </div>
             <div class="row projects">
+                <!-- Project box start here -->
                 <div class="col-sm-6 item">
-                    <div class="row">
+                    <div class="row homepageProjects">
                         <div class="col-md-12 col-lg-5">
-                            <a href="#"><img class="img-fluid" data-aos="fade" data-aos-duration="1700"
-                                    src="assets/img/thumbnails/desk.jpg" /></a>
+                            <a href="#"><img class="imgThumbnail img-fluid" data-aos="fade" data-aos-duration="1700" src="assets/img/thumbnails/guess-the-color-game.png" /></a>
                         </div>
                         <div class="col">
                             <h3 class="name">Project Name</h3>
@@ -103,11 +103,11 @@
                                 Aenean tortor est, vulputate quis leo in, vehicula rhoncus
                                 lacus. Praesent aliquam in tellus eu gravida.
                             </p>
-                            <a href="" target="_blank"><button type="button" class="readBtn btn btn-outline-primary btn-sm">Read
-                                    more</button></a>
+                            <a href="" target="_blank"><button type="button" class="readBtn btn btn-outline-primary btn-sm">Read more</button></a>
                         </div>
                     </div>
                 </div>
+                <!-- Project box ends here -->
             </div>
             <div id="dadbtn">
                 <a class="text-decoration-none" href="Projects.html"><button class="btn btn-primary" id="btn1"
