--- a/index.html
+++ b/index.html
@@ -98,12 +98,12 @@
                             <a href="#"><img class="imgThumbnail img-fluid" data-aos="fade" data-aos-duration="1700" src="assets/img/thumbnails/guess-the-color-game.png" /></a>
                         </div>
                         <div class="col">
-                            <h3 class="name">Project Name</h3>
+                            <h3 class="name">Guess the Color game</h3>
                             <p class="description">
                                 Aenean tortor est, vulputate quis leo in, vehicula rhoncus
                                 lacus. Praesent aliquam in tellus eu gravida.
                             </p>
-                            <a href="" target="_blank"><button type="button" class="readBtn btn btn-outline-primary btn-sm">Read more</button></a>
+                            <a  href="/Contact.html" target="_blank"><button type="button" class="readBtn btn btn-outline-primary btn-sm">Read more</button></a>
                         </div>
                     </div>
                 </div>
