--- a/Projects.html
+++ b/Projects.html
@@ -55,24 +55,22 @@
             </div>
             <div id="projectBox" class="row projects">
                 <!-- box start here -->
-                <div class="col-sm-6 col-lg-4 item">
+
+                <!-- <div class="col-sm-6 col-lg-4 item">
                     <img class="imgThumbnail img-fluid rounded-0 border" data-bss-hover-animate="pulse"
                         src="assets/img/Thumbnails/notes-app.png">
                     <h3 class="name">Notes WebApp</h3>
                     <p class="description">Fans cheering crash was 'mind-blowing' - Hamilton</p>
+                    <span class="badge rounded-pill text-white bg-danger">HTML</span>
+                    <span class="badge rounded-pill text-white bg-primary">CSS</span>
+                    <span class="badge rounded-pill text-black bg-warning">Javascript</span>
+                    <br>
                     <a href="/" target="_blank"><button type="button" class="readBtn btn btn-outline-primary">Read
-                        more</button></a><br>
-                        <!-- <span class="badge text-black bg-warning">Javascript</span> -->
-                        <img class="langIcon" src="assets/img/Thumbnails/icon/html.png" alt="">
-                        <img class="langIcon" src="assets/img/Thumbnails/icon/css.png" alt="">
-                        <img class="langIcon" src="assets/img/Thumbnails/icon/js.png" alt="">
-
-                </div>
+                            more</button></a>
+                </div> -->
 
                 <!-- box ends here -->
-
             </div>
-        </div>
     </section>
     <footer class="footer-basic">
         <div class="social"><a data-bss-hover-animate="tada" href="#"><i class="icon ion-social-instagram"></i></a><a
