Add links of source code

--- a/index.html
+++ b/index.html
@@ -95,7 +95,8 @@
                 <div class="col-sm-6 item">
                     <div class="row homepageProjects">
                         <div class="col-md-12 col-lg-5">
-                            <a href="#"><img class="imgThumbnail img-fluid" data-aos="fade" data-aos-duration="1700" src="assets/img/thumbnails/guess-the-color-game.png" /></a>
+                            <a href="#"><img class="imgThumbnail img-fluid" data-aos="fade" data-aos-duration="1700"
+                                    src="assets/img/thumbnails/guess-the-color-game.png" /></a>
                         </div>
                         <div class="col">
                             <h3 class="name">Guess the Color game</h3>
@@ -103,10 +104,66 @@
                                 Aenean tortor est, vulputate quis leo in, vehicula rhoncus
                                 lacus. Praesent aliquam in tellus eu gravida.
                             </p>
-                            <a  href="/Contact.html" target="_blank"><button type="button" class="readBtn btn btn-outline-primary btn-sm">Read more</button></a>
+                            <a href="/Contact.html" target="_blank"><button type="button"
+                                    class="readBtn btn btn-outline-primary btn-sm">Read more</button></a>
                         </div>
                     </div>
                 </div>
+
+                <div class="col-sm-6 item">
+                    <div class="row homepageProjects">
+                        <div class="col-md-12 col-lg-5">
+                            <a href="#"><img class="imgThumbnail img-fluid" data-aos="fade" data-aos-duration="1700"
+                                    src="assets/img/thumbnails/notes-app.png" /></a>
+                        </div>
+                        <div class="col">
+                            <h3 class="name">Notes Web App</h3>
+                            <p class="description">
+                                Aenean tortor est, vulputate quis leo in, vehicula rhoncus
+                                lacus. Praesent aliquam in tellus eu gravida.
+                            </p>
+                            <a href="/Contact.html" target="_blank"><button type="button"
+                                    class="readBtn btn btn-outline-primary btn-sm">Read more</button></a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-sm-6 item">
+                    <div class="row homepageProjects">
+                        <div class="col-md-12 col-lg-5">
+                            <a href="#"><img class="imgThumbnail img-fluid" data-aos="fade" data-aos-duration="1700"
+                                    src="assets/img/thumbnails/news-website.png" /></a>
+                        </div>
+                        <div class="col">
+                            <h3 class="name">News Website</h3>
+                            <p class="description">
+                                Aenean tortor est, vulputate quis leo in, vehicula rhoncus
+                                lacus. Praesent aliquam in tellus eu gravida.
+                            </p>
+                            <a href="/Contact.html" target="_blank"><button type="button"
+                                    class="readBtn btn btn-outline-primary btn-sm">Read more</button></a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-sm-6 item">
+                    <div class="row homepageProjects">
+                        <div class="col-md-12 col-lg-5">
+                            <a href="#"><img class="imgThumbnail img-fluid" data-aos="fade" data-aos-duration="1700"
+                                    src="assets/img/thumbnails/coding-contest-live.png" /></a>
+                        </div>
+                        <div class="col">
+                            <h3 class="name">Coding Contest Live</h3>
+                            <p class="description">
+                                Aenean tortor est, vulputate quis leo in, vehicula rhoncus
+                                lacus. Praesent aliquam in tellus eu gravida.
+                            </p>
+                            <a href="/Contact.html" target="_blank"><button type="button"
+                                    class="readBtn btn btn-outline-primary btn-sm">Read more</button></a>
+                        </div>
+                    </div>
+                </div>
+
                 <!-- Project box ends here -->
             </div>
             <div id="dadbtn">
