Showing projects on home Page

--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
 </head>
 
 <body>
+
+    <!-- Navbar Start here -->
     <nav class="navbar navbar-light navbar-expand-lg navigation-clean-search">
         <div class="container">
             <img class="navlogo" src="assets/img/Hardik4u%20(4).png" /><a class="navbar-brand"
@@ -59,6 +61,7 @@
             </div>
         </div>
     </nav>
+    <!-- Profile Pic box -->
     <section class="team-boxed">
         <div class="container">
             <div class="intro"></div>
@@ -82,6 +85,8 @@
             </div>
         </div>
     </section>
+
+    <!-- Projects Are here -->
     <section class="projects-horizontal">
         <div class="container">
             <div class="intro">
@@ -90,9 +95,9 @@
                     These are some of my Projects. All Projects are available on Github. You can check it out.
                 </p>
             </div>
-            <div class="row projects">
+            <div id="homeProjects" class="row projects">
                 <!-- Project box start here -->
-                <div class="col-sm-6 item">
+                <!-- <div class="col-sm-6 item">
                     <div class="row homepageProjects">
                         <div class="col-md-12 col-lg-5">
                             <a href="#"><img class="imgThumbnail img-fluid" data-aos="fade" data-aos-duration="1700"
@@ -108,61 +113,7 @@
                                     class="readBtn btn btn-outline-primary btn-sm">Read more</button></a>
                         </div>
                     </div>
-                </div>
-
-                <div class="col-sm-6 item">
-                    <div class="row homepageProjects">
-                        <div class="col-md-12 col-lg-5">
-                            <a href="#"><img class="imgThumbnail img-fluid" data-aos="fade" data-aos-duration="1700"
-                                    src="assets/img/thumbnails/notes-app.png" /></a>
-                        </div>
-                        <div class="col">
-                            <h3 class="name">Notes Web App</h3>
-                            <p class="description">
-                                Aenean tortor est, vulputate quis leo in, vehicula rhoncus
-                                lacus. Praesent aliquam in tellus eu gravida.
-                            </p>
-                            <a href="/Contact.html" target="_blank"><button type="button"
-                                    class="readBtn btn btn-outline-primary btn-sm">Read more</button></a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-sm-6 item">
-                    <div class="row homepageProjects">
-                        <div class="col-md-12 col-lg-5">
-                            <a href="#"><img class="imgThumbnail img-fluid" data-aos="fade" data-aos-duration="1700"
-                                    src="assets/img/thumbnails/news-website.png" /></a>
-                        </div>
-                        <div class="col">
-                            <h3 class="name">News Website</h3>
-                            <p class="description">
-                                Aenean tortor est, vulputate quis leo in, vehicula rhoncus
-                                lacus. Praesent aliquam in tellus eu gravida.
-                            </p>
-                            <a href="/Contact.html" target="_blank"><button type="button"
-                                    class="readBtn btn btn-outline-primary btn-sm">Read more</button></a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-sm-6 item">
-                    <div class="row homepageProjects">
-                        <div class="col-md-12 col-lg-5">
-                            <a href="#"><img class="imgThumbnail img-fluid" data-aos="fade" data-aos-duration="1700"
-                                    src="assets/img/thumbnails/coding-contest-live.png" /></a>
-                        </div>
-                        <div class="col">
-                            <h3 class="name">Coding Contest Live</h3>
-                            <p class="description">
-                                Aenean tortor est, vulputate quis leo in, vehicula rhoncus
-                                lacus. Praesent aliquam in tellus eu gravida.
-                            </p>
-                            <a href="/Contact.html" target="_blank"><button type="button"
-                                    class="readBtn btn btn-outline-primary btn-sm">Read more</button></a>
-                        </div>
-                    </div>
-                </div>
+                </div> -->
 
                 <!-- Project box ends here -->
             </div>
@@ -263,6 +214,7 @@
             Copyright © 2020-2021 hardikdesai.myartsonline.com<br />
         </p>
     </footer>
+    <script src="assets/js/index.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="assets/js/bs-init.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
