--- a/Contact.html
+++ b/Contact.html
@@ -47,6 +47,7 @@
             </div>
         </div>
     </nav>
+
     <section>
         <div>
             <h1>Contact me</h1>
@@ -54,14 +55,22 @@
         <div>
             <section class="register-photo">
                 <div class="form-container">
-                    <form method="post">
+                    <form method="post"
+                        action="https://script.google.com/macros/s/AKfycby3alMx5O6iCxYSCGyAqXiwOZkgm0iLnIV3SqHQLZquNH4g-oXgjHcYUqziRZk1VI7rJg/exec">
                         <h2 class="text-center"><strong>Hire me</strong></h2>
-                        <div class="mb-3"><input class="form-control" type="text" placeholder="Name" required=""></div>
+
+                        <div class="mb-3"><input class="form-control" type="text" name="name" placeholder="Name"
+                                required=""></div>
+
                         <div class="mb-3"><input class="form-control" type="email" name="email" placeholder="Email"
                                 required=""></div>
-                        <div class="mb-3"><input class="form-control" type="tel" placeholder="Phone (optional)"></div>
-                        <div class="mb-3"><textarea class="form-control" placeholder="message" rows="10" cols="10"
-                                required=""></textarea></div>
+
+                        <div class="mb-3"><input class="form-control" type="tel" name="phone"
+                                placeholder="Phone (optional)"></div>
+
+                        <div class="mb-3"><textarea class="form-control" placeholder="message" name="message" rows="10"
+                                cols="10" required=""></textarea></div>
+
                         <div class="mb-3"><button class="btn btn-primary d-block w-100" type="submit">Send</button>
                         </div>
                     </form>
@@ -69,6 +78,7 @@
             </section>
         </div>
     </section>
+
     <footer class="footer-basic">
         <div class="social"><a data-bss-hover-animate="tada" href="#"><i class="icon ion-social-instagram"></i></a><a
                 data-bss-hover-animate="tada" href="#"><i class="icon ion-social-snapchat"></i></a><a
