Update Contact Form

--- a/Contact.html
+++ b/Contact.html
@@ -53,10 +53,11 @@
             <h1>Contact me</h1>
         </div>
         <div>
+            <!-- onsubmit="showCustomPage()" -->
             <section class="register-photo">
                 <div class="form-container">
-                    <form id="contactForm" onsubmit="showCustomPage()" method="post" target="_blank"
-                        action="https://script.google.com/macros/s/AKfycby3alMx5O6iCxYSCGyAqXiwOZkgm0iLnIV3SqHQLZquNH4g-oXgjHcYUqziRZk1VI7rJg/exec">
+                    <form id="contactForm" method="post" target="_blank"
+                        action="https://script.google.com/macros/s/AKfycbwLCg9BVMumcd1OdqjuhcDMa31NEchmExAjkz0uh_X7E21VpYlEq02HinR_zbZ2POKtuw/exec">
                         <h2 class="text-center"><strong>Hire me</strong></h2>
 
                         <div class="mb-3">
