Update discription in JSON

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                         <a class="nav-link active" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="About.html">About</a>
+                        <a class="nav-link" target="_blank" href="assets/Resume/Hardik_Resume_july_2022.pdf">About</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="Projects.html">Projects</a>
@@ -95,6 +95,8 @@
                     These are some of my Projects. All Projects are available on Github. You can check it out.
                 </p>
             </div>
+
+            <!-- All Home Page Project in this div -->
             <div id="homeProjects" class="row projects">
                 <!-- Project box start here -->
                 <!-- <div class="col-sm-6 item">
@@ -117,6 +119,7 @@
 
                 <!-- Project box ends here -->
             </div>
+
             <div id="dadbtn">
                 <a class="text-decoration-none" href="Projects.html"><button class="btn btn-primary" id="btn1"
                         type="button">
@@ -130,15 +133,13 @@
             <div class="intro">
                 <h2 class="text-center">Special Skills</h2>
                 <p class="text-center">
-                    Nunc luctus in metus eget fringilla. Aliquam sed justo ligula.
-                    Vestibulum nibh erat, pellentesque ut laoreet vitae.
+                    This are my all Technical and Non-Technical Skills
                 </p>
             </div>
             <div class="row justify-content-center features">
                 <div class="col-sm-6 col-md-5 col-lg-4 item">
                     <div class="box">
-                        <i class="fa fa-map-marker icon ion-ios-star-outline" data-aos="zoom-in"
-                            data-aos-duration="1000"></i>
+                        <i class="fa fa-map-marker icon ion-ios-star-outline" data-aos="zoom-in"></i>
                         <h3 class="name">Teamwork<br /></h3>
                         <p class="description">
                             Aenean tortor est, vulputate quis leo in, vehicula rhoncus
@@ -198,9 +199,9 @@
     </section>
     <footer class="footer-basic">
         <div class="social">
-            <a data-bss-hover-animate="tada" href="#"><i class="icon ion-social-instagram"></i></a><a
-                data-bss-hover-animate="tada" href="#"><i class="icon ion-social-snapchat"></i></a><a
-                data-bss-hover-animate="tada" href="#"><i class="icon ion-social-twitter"></i></a><a
+            <a data-bss-hover-animate="tada" href="https://www.instagram.com/imhardikdesai/"><i class="icon ion-social-instagram"></i></a><a
+                data-bss-hover-animate="tada" href="https://t.snapchat.com/njT4fnpw"><i class="icon ion-social-snapchat"></i></a><a
+                data-bss-hover-animate="tada" href="https://www.twitter.com/imhardikdesai/"><i class="icon ion-social-twitter"></i></a><a
                 data-bss-hover-animate="tada" href="#"><i
                     class="icon ion-social-facebook icon ion-social-linkedin"></i></a>
         </div>
