Updated Social Handel Links

--- a/About.html
+++ b/About.html
@@ -51,8 +51,7 @@
         <div class="row" style="margin: 25px 5px;padding: 1px;margin-top: 3px;">
             <div class="col-md-4 col-lg-4"
                 style="background: #f7f7f7;margin: 10px;/*display: flex;*//*align-items: center;*/"><img
-                    class="img-fluid" src="assets/img/Admin.png"
-                    style="height: 284px;/*justify-content: center;*/">
+                    class="img-fluid" src="assets/img/Admin.png" style="height: 284px;/*justify-content: center;*/">
                 <div>
                     <h1>Desai Hardik</h1>
                 </div>
@@ -201,11 +200,20 @@
         </div>
     </div>
     <footer class="footer-basic">
-        <div class="social"><a data-bss-hover-animate="tada" href="#"><i class="icon ion-social-instagram"></i></a><a
-                data-bss-hover-animate="tada" href="#"><i class="icon ion-social-snapchat"></i></a><a
-                data-bss-hover-animate="tada" href="#"><i class="icon ion-social-twitter"></i></a><a
-                data-bss-hover-animate="tada" href="#"><i
-                    class="icon ion-social-facebook icon ion-social-linkedin"></i></a></div>
+        <div class="social">
+            <a target="_blank" data-bss-hover-animate="tada" href="https://www.instagram.com/imhardikdesai/">
+                <i class="icon ion-social-instagram"></i>
+            </a>
+            <a target="_blank" data-bss-hover-animate="tada" href="https://t.snapchat.com/njT4fnpw">
+                <i class="icon ion-social-snapchat"></i>
+            </a>
+            <a target="_blank" data-bss-hover-animate="tada" href="https://www.twitter.com/imhardikdesai/">
+                <i class="icon ion-social-twitter"></i>
+            </a>
+            <a target="_blank" data-bss-hover-animate="tada" href="https://www.linkedin.com/in/desai-hardik-6b239b213/">
+                <i class="icon ion-social-facebook icon ion-social-linkedin"></i>
+            </a>
+        </div>
         <ul class="list-inline">
             <li class="list-inline-item"><a href="index.html">Home</a></li>
             <li class="list-inline-item"><a href="About.html">About</a></li>
