--- a/index.html
+++ b/index.html
@@ -199,11 +199,18 @@
     </section>
     <footer class="footer-basic">
         <div class="social">
-            <a data-bss-hover-animate="tada" href="https://www.instagram.com/imhardikdesai/"><i class="icon ion-social-instagram"></i></a><a
-                data-bss-hover-animate="tada" href="https://t.snapchat.com/njT4fnpw"><i class="icon ion-social-snapchat"></i></a><a
-                data-bss-hover-animate="tada" href="https://www.twitter.com/imhardikdesai/"><i class="icon ion-social-twitter"></i></a><a
-                data-bss-hover-animate="tada" href="#"><i
-                    class="icon ion-social-facebook icon ion-social-linkedin"></i></a>
+            <a target="_blank" data-bss-hover-animate="tada" href="https://www.instagram.com/imhardikdesai/">
+                <i class="icon ion-social-instagram"></i>
+            </a>
+            <a target="_blank" data-bss-hover-animate="tada" href="https://t.snapchat.com/njT4fnpw">
+                <i class="icon ion-social-snapchat"></i>
+            </a>
+            <a target="_blank" data-bss-hover-animate="tada" href="https://www.twitter.com/imhardikdesai/">
+                <i class="icon ion-social-twitter"></i>
+            </a>
+            <a target="_blank" data-bss-hover-animate="tada" href="https://www.linkedin.com/in/desai-hardik-6b239b213/">
+                <i class="icon ion-social-facebook icon ion-social-linkedin"></i>
+            </a>
         </div>
         <ul class="list-inline">
             <li class="list-inline-item"><a href="index.html">Home</a></li>
