Add skills with icons

--- a/About.html
+++ b/About.html
@@ -47,6 +47,7 @@
             </div>
         </div>
     </nav>
+
     <div class="container shadow" id="home">
         <div class="row" style="margin: 25px 5px;padding: 1px;margin-top: 3px;">
             <div class="col-md-4 col-lg-4"
@@ -199,6 +200,7 @@
             </div>
         </div>
     </div>
+
     <footer class="footer-basic">
         <div class="social">
             <a target="_blank" data-bss-hover-animate="tada" href="https://www.instagram.com/imhardikdesai/">
@@ -220,8 +222,9 @@
             <li class="list-inline-item"><a href="Projects.html">Projects</a></li>
             <li class="list-inline-item"><a href="Contact.html">Contact</a></li>
         </ul>
-        <p class="copyright">Copyright © 2020-2021 hardikdesai.myartsonline.com<br></p>
+        <p class="copyright">Copyright © 2022-2023 bit.ly/imhardikdesai<br></p>
     </footer>
+    
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="assets/js/bs-init.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
