--- a/Contact.html
+++ b/Contact.html
@@ -85,6 +85,7 @@
             </section>
         </div>
     </section>
+
     <footer class="footer-basic">
         <div class="social">
             <a target="_blank" data-bss-hover-animate="tada" href="https://www.instagram.com/imhardikdesai/">
@@ -106,8 +107,9 @@
             <li class="list-inline-item"><a href="Projects.html">Projects</a></li>
             <li class="list-inline-item"><a href="Contact.html">Contact</a></li>
         </ul>
-        <p class="copyright">Copyright © 2020-2021 hardikdesai.myartsonline.com<br></p>
+        <p class="copyright">Copyright © 2022-2023 bit.ly/imhardikdesai<br></p>
     </footer>
+    
     <script src="assets/js/contact.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="assets/js/bs-init.js"></script>
