Add Links in navigation and done final commit

--- a/About.html
+++ b/About.html
@@ -39,11 +39,11 @@
                     <li class="nav-item"><a class="nav-link" href="Projects.html">Projects</a></li>
                     <li class="nav-item"><a class="nav-link" href="Contact.html">Contact</a></li>
                 </ul>
-                <form class="me-auto search-form" target="_self">
+                <!-- <form class="me-auto search-form" target="_self">
                     <div class="d-flex align-items-center"><label class="form-label d-flex mb-0" for="search-field"><i
                                 class="fa fa-search"></i></label><input class="form-control search-field" type="search"
                             id="search-field" name="search"></div>
-                </form><a class="btn btn-light action-button" role="button" href="#">Search</a>
+                </form><a class="btn btn-light action-button" role="button" href="#">Search</a> -->
             </div>
         </div>
     </nav>
