--- a/Contact.html
+++ b/Contact.html
@@ -27,23 +27,27 @@
 
 <body>
     <nav class="navbar navbar-light navbar-expand-lg navigation-clean-search">
-        <div class="container"><img class="navlogo" src="assets/img/Hardik4u%20(4).png"><a class="navbar-brand"
-                href="#">Hardik's Portfolio</a><button data-bs-toggle="collapse" class="navbar-toggler"
-                data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span
-                    class="navbar-toggler-icon"></span></button>
+        <div class="container">
+            <img class="navlogo" src="assets/img/Hardik4u%20(4).png">
+            <a class="navbar-brand" href="#">Hardik's Portfolio</a>
+            <button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1">
+                <span class="visually-hidden">Toggle navigation</span>
+                <span class="navbar-toggler-icon"></span>
+            </button>
             <div class="collapse navbar-collapse" id="navcol-1">
                 <ul class="navbar-nav">
                     <li class="nav-item"></li>
                     <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="About.html">About</a></li>
+                    <li class="nav-item"><a class="nav-link" target="_blank"
+                            href="assets/Resume/Hardik_Resume_july_2022.pdf">About</a></li>
                     <li class="nav-item"><a class="nav-link" href="Projects.html">Projects</a></li>
                     <li class="nav-item"><a class="nav-link active" href="#">Contact</a></li>
                 </ul>
-                <form class="me-auto search-form" target="_self">
+                <!-- <form class="me-auto search-form" target="_self">
                     <div class="d-flex align-items-center"><label class="form-label d-flex mb-0" for="search-field"><i
                                 class="fa fa-search"></i></label><input class="form-control search-field" type="search"
                             id="search-field" name="search"></div>
-                </form><a class="btn btn-light action-button" role="button" href="#">Search</a>
+                </form><a class="btn btn-light action-button" role="button" href="#">Search</a> -->
             </div>
         </div>
     </nav>
@@ -103,13 +107,13 @@
         </div>
         <ul class="list-inline">
             <li class="list-inline-item"><a href="index.html">Home</a></li>
-            <li class="list-inline-item"><a href="About.html">About</a></li>
+            <li class="list-inline-item"><a href="assets/Resume/Hardik_Resume_july_2022.pdf">About</a></li>
             <li class="list-inline-item"><a href="Projects.html">Projects</a></li>
             <li class="list-inline-item"><a href="Contact.html">Contact</a></li>
         </ul>
         <p class="copyright">Copyright © 2022-2023 bit.ly/imhardikdesai<br></p>
     </footer>
-    
+
     <script src="assets/js/contact.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="assets/js/bs-init.js"></script>
