--- a/Projects.html
+++ b/Projects.html
@@ -34,15 +34,16 @@
             <div class="collapse navbar-collapse" id="navcol-1">
                 <ul class="navbar-nav">
                     <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="About.html">About</a></li>
+                    <li class="nav-item"><a class="nav-link" target="_blank"
+                            href="assets/Resume/Hardik_Resume_july_2022.pdf">About</a></li>
                     <li class="nav-item"><a class="nav-link active" href="#">Projects</a></li>
                     <li class="nav-item"><a class="nav-link" href="Contact.html">Contact</a></li>
                 </ul>
-                <form class="me-auto search-form" target="_self">
+                <!-- <form class="me-auto search-form" target="_self">
                     <div class="d-flex align-items-center"><label class="form-label d-flex mb-0" for="search-field"><i
                                 class="fa fa-search"></i></label><input class="form-control search-field" type="search"
                             id="search-field" name="search"></div>
-                </form><a class="btn btn-light action-button" role="button" href="#">Search</a>
+                </form><a class="btn btn-light action-button" role="button" href="#">Search</a> -->
             </div>
         </div>
     </nav>
@@ -51,8 +52,8 @@
         <div class="container">
             <div class="intro">
                 <h2 class="text-center">Recent work</h2>
-                <p class="text-center">Nunc luctus in metus eget fringilla. Aliquam sed justo ligula. Vestibulum nibh
-                    erat, pellentesque ut laoreet vitae. </p>
+                <p class="text-center">Here are my all Projects that are done in Past with source code and live Preview
+                </p>
             </div>
             <div id="projectBox" class="row projects">
                 <!-- box start here -->
@@ -91,13 +92,13 @@
         </div>
         <ul class="list-inline">
             <li class="list-inline-item"><a href="index.html">Home</a></li>
-            <li class="list-inline-item"><a href="About.html">About</a></li>
+            <li class="list-inline-item"><a href="assets/Resume/Hardik_Resume_july_2022.pdf">About</a></li>
             <li class="list-inline-item"><a href="Projects.html">Projects</a></li>
             <li class="list-inline-item"><a href="Contact.html">Contact</a></li>
         </ul>
         <p class="copyright">Copyright © 2022-2023 bit.ly/imhardikdesai<br></p>
     </footer>
-    
+
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="assets/js/bs-init.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
