--- a/index.html
+++ b/index.html
@@ -50,14 +50,14 @@
                         <a class="nav-link" href="Contact.html">Contact</a>
                     </li>
                 </ul>
-                <form class="me-auto search-form" target="_self">
+                <!-- <form class="me-auto search-form" target="_self">
                     <div class="d-flex align-items-center">
                         <label class="form-label d-flex mb-0" for="search-field"><i
                                 class="fa fa-search"></i></label><input class="form-control search-field" type="search"
                             id="search-field" name="search" />
                     </div>
                 </form>
-                <a class="btn btn-light action-button" role="button" href="#">Search</a>
+                <a class="btn btn-light action-button" role="button" href="#">Search</a> -->
             </div>
         </div>
     </nav>
@@ -289,7 +289,7 @@
         </div>
         <ul class="list-inline">
             <li class="list-inline-item"><a href="index.html">Home</a></li>
-            <li class="list-inline-item"><a href="About.html">About</a></li>
+            <li class="list-inline-item"><a href="assets/Resume/Hardik_Resume_july_2022.pdf">About</a></li>
             <li class="list-inline-item"><a href="Projects.html">Projects</a></li>
             <li class="list-inline-item"><a href="Contact.html">Contact</a></li>
         </ul>
